pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/case-lambda2.rkt
#lang typed/racket
(: f (case->
  (Symbol -> Symbol)
  (Symbol Symbol -> Symbol)))
(define f (case-lambda
            ((x) x)
             (w w)
            ((x y) x)
        ))

(f 'x 'y)
